# Sequential-vs-Parallel

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: defines.h  parallel.h  parallel_open_mp.h  sequential.h  util.h
src/: parallel.cpp  parallel_open_mp.cpp  sequential.cpp  util.cpp
